Update config: split-plan-large-2.yaml via Edit [2026-01-01 22:58]

--- a/internal/parser/testdata/split-plan-large-2.yaml
+++ b/internal/parser/testdata/split-plan-large-2.yaml
@@ -11,7 +11,10 @@ plan:
   default_agent: "golang-pro"
   quality_control:
     enabled: true
-    review_agent: "quality-control"
+    agents:
+      mode: explicit
+      explicit_list:
+        - quality-control
     retry_on_red: 2
   tasks:
     - task_number: 6
