--- a/internal/parser/testdata/split-plan-large-1.yaml
+++ b/internal/parser/testdata/split-plan-large-1.yaml
@@ -11,7 +11,10 @@ plan:
   default_agent: "devops-engineer"
   quality_control:
     enabled: true
-    review_agent: "quality-control"
+    agents:
+      mode: explicit
+      explicit_list:
+        - quality-control
     retry_on_red: 2
   tasks:
     - task_number: 1
