Update config: plan-01-setup.yaml via Edit [2026-01-01 22:58]

--- a/internal/parser/testdata/cross-file-fixtures/split-plan-linear/plan-01-setup.yaml
+++ b/internal/parser/testdata/cross-file-fixtures/split-plan-linear/plan-01-setup.yaml
@@ -2,7 +2,10 @@ conductor:
   default_agent: godev
   quality_control:
     enabled: true
-    review_agent: code-reviewer
+    agents:
+      mode: explicit
+      explicit_list:
+        - code-reviewer
 
 plan:
   metadata:
