--- a/internal/parser/testdata/cross-file-fixtures/split-plan-linear/plan-02-features.yaml
+++ b/internal/parser/testdata/cross-file-fixtures/split-plan-linear/plan-02-features.yaml
@@ -2,7 +2,10 @@ conductor:
   default_agent: godev
   quality_control:
     enabled: true
-    review_agent: code-reviewer
+    agents:
+      mode: explicit
+      explicit_list:
+        - code-reviewer
 
 plan:
   metadata:
