--- a/internal/config/testdata/full-config.yaml
+++ b/internal/config/testdata/full-config.yaml
@@ -10,11 +10,9 @@ learning:
   enabled: true
   db_path: /tmp/learning.db
   swap_during_retries: false
-  qc_reads_plan_context: false
-  qc_reads_db_context: false
-  max_context_entries: 25
+  warmup_enabled: true
   keep_executions_days: 45
-  max_executions_per_task: 150
+  min_failures_before_adapt: 2
 
 quality_control:
   enabled: true
