feat: add SetupIntrospector implementation plan
Pre-Wave Setup Phase feature that lets Claude introspect the project
to determine setup commands (go mod download, docker-compose up, etc.)
before Wave 1 execution.

- 11 tasks across 5 worktree groups
- Config, types, core implementation, integration, testing, docs
- Updates .gitignore to track this specific plan file

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,6 @@ docs/*
 
 # To un-ignore a file in an ignored directory, need to:
 !docs/conductor.md
+!docs/plans/
+docs/plans/*
+!docs/plans/setup-introspector.yaml
