--- a/.conductor/config.yaml.example
+++ b/.conductor/config.yaml.example
@@ -697,3 +697,15 @@ timeouts:
 # Example: Comprehensive search with longer timeout
 # timeouts:
 #   search: 60s
+
+# Metrics configuration (v3.4+)
+# Controls execution metrics collection
+metrics:
+  # Track lines added/deleted per task (default: true)
+  loc_tracking: true
+
+# Metrics Examples
+
+# Example: Disable LOC tracking
+# metrics:
+#   loc_tracking: false
